--- a/index.html
+++ b/index.html
@@ -17,31 +17,44 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=BIZ+UDPMincho&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body class="sawarabi-gothic-regular">
+<body class="biz-udpmincho-regular">
 
     <header>
         <section class="container text-center pt-5 mt-5">
-            <h1 class="sawarabi-mincho-regular"><a href="/" class="link-warning link-underline-opacity-0">たまのこそうし</a></h1>
+            <h1><a href="/" class="link-warning link-underline-opacity-0">たまのこそうし</a></h1>
             <h2 class="fs-6">日々の雑記帳です。</h2>
         </section>
     </header>
 
     <main>
-        <article class="py-5 my-5">
+        <article class="my-5">
             <section class="container">
-                <div class="row">
+                <div class="row py-5">
+                    <div class="col-lg-8 offset-lg-2">
+                        <h4 class="fs-6">2025.05.11</h4>
+                        <h3 class="mb-4">あっちゅーまに５月</h3>
+                        <p>はやすぎぃ。</p>
+                        <p>なんだかず〜っと怒涛の仕事三昧で・・・いや・・・三昧と言いつつもう何が何やらな日々を送っております。とは言え元気です。</p>
+                        <p>春先にスタートした同人サークル <a href="https://www.semuian.jp" target="_blank" rel="noopener noreferrer" class="link-warning">semuian</a> のほうは、周囲の協力を得て文芸誌を手作りすることになり、現在粛々と準備を進めているところです。初頒布は今年の9月14日（日）に開催される大阪フリマ13を予定しています。同人活動したいなあ〜こういうイベント出てみたいな〜とずっと思っていたので、ご協力くださる皆さまのおかげで夢が叶って本当に嬉しいです。</p>
+                        <p>また、ここ数年、作る作ると言いつつなかなか進められていなかった構想中のゲーム「東風」を、小説という形で上記雑誌に掲載することになり、こちらもようやく動き出すことができてありがたく思っています。ちなみに小説の一部は <a href="https://www.semuian.jp/kochi/" target="_blank" rel="noopener noreferrer" class="link-warning">semuianの小説「東風」のページ</a> で試し読みいただけますので、よろしければぜひご笑覧ください。</p>
+                        <p>私は基本マイペースで個人プレーばかりしてしまうのですが、このsemuianでは色々な方に一緒に活動していただけておりまして、感謝の念に堪えません。この調子で、制作陣もこれから読者になってくださる方々も、まるっとハッピーな感じになれる、そんな雑誌を世に出せたらええなあ思とります。</p>
+                        <p>それでは、寒暖差が大きい日々が続きますが、風邪など召されませぬよう皆さまどうぞご自愛ください。</p>
+                        <p>youkou</p>
+                    </div>
+                </div>
+                <div class="row py-5">
                     <div class="col-lg-8 offset-lg-2">
                         <h4 class="fs-6">2025.02.25</h4>
-                        <h3 class="sawarabi-mincho-regular mb-4">ホームページをリニューアル中です</h3>
+                        <h3 class="mb-4">ホームページをリニューアル中です</h3>
                         <p>こんにちは、youkouです。</p>
                         <p>これまでBloggerを使ってのんびりブログ記事を投稿していましたが、改めて同じドメインで個人サイトを作り直すことにしました。Bloggerにアップしていた記事はちょっとずつこちらに移す予定です。</p>
                         <p>リニューアルのきっかけは、創作活動に最近少しずつ熱がこもり始め、特に <a href="https://www.semuian.jp" target="_blank" rel="noopener noreferrer" class="link-warning">和を楽しむ文化系同人結社「semuian（施無畏庵・せむいあん）」</a> を立ち上げましたので、それに合わせてこちらもちょっと気分転換してみようかなと思った次第です。まあこれまでもそうしてきたように、これからも何でもないことをゆるゆると書き散らす感じになるのかなと思います。</p>
                         <p>そんな私の近況ですが、昨年の後半から少しずつWEBエンジニアの仕事を再開いたしまして、年明け以降は「これぞ、多忙を極めると言うのでは？」という目まぐるしい日々を送っております。数年だけとは言え、妊娠出産で完全に仕事を離れ、最新情報に少しずつ疎くなり、エンジニア再開は心身ともにキツいかな・・・などとうっすら思っていましたが、大変ありがたいことに素晴らしい現場に巡り会うことができ、日々楽しくお仕事させていただいております。</p>
-                        <p>特に興味深いのが、20〜30代にかけて「点」で学んできたことが、今ついに「線」になり、仕事がめちゃくちゃ楽というか、天空の城ラピュタのムスカが古代文字を目にして「わかる、わかるぞ・・・！！」って言っているアレみたいな感じになっています。よく30〜40代は「脂が乗っている」なんて言われますが、こういうことなんですかね！？</p>
-                        <p>とにかくこう、ちょっとトラブルが起きたり、知らないことや新しいことが飛び込んできたりしても、「あ〜はいはい」って動じずに対応できるのは本当にありがたいです。これまで私を鍛えてくださった方々のおかげです。本当にありがとうございます。</p>
+                        <p>特に興味深いのが、20〜30代にかけて「点」で学んできたことが、今ついに「線」になり、仕事がめちゃくちゃ楽というか、天空の城ラピュタのムスカが古代文字を目にして「わかる、わかるぞ・・・！！」ってなっているアレみたいな感じになっています。よく30〜40代は「脂が乗っている」なんて言われますが、こういうことなんですかね！？</p>
+                        <p>とにかくこう、ちょっとトラブルが起きたり、知らないことや新しいことが飛び込んできたりしても、「はい！よころんで！」と動じずに対応できるのは本当にありがたいです。これまで私を鍛えてくださった方々のおかげです。本当にありがとうございます。</p>
                         <p>もう一つ興味深いなあと思うことが、教わる側から教える側へ、気が付いたら自分がなっていた件について。これまで諸先輩方が私の面倒を見てくださったように、次の世代を応援する立場に自分もなったんだなと思うとなんだかグッとくるものがあります。うまくできているか分からないけれど、せめて次の世代の邪魔だけはしないように気を付けなければと感じています。</p>
                         <p>そんなこんなで、ハチャメチャに忙しいけど気持ちはのんびりな感じで過ごしています。皆さまいかがお過ごしでしょうか？引き続きどうぞよろしくお願い申し上げます！</p>
                         <p>youkou</p>
@@ -52,13 +65,14 @@
     </main>
 
     <footer>
-        <section class="container my-5">
+        <section class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h3 class="sawarabi-mincho-regular mb-4">谷口瑶光<br class="d-block d-md-none"><span class="fs-5">（Youkou TANIGUCHI、youkou）</span></h3>
+                    <hr class="my-5">
+                    <h3 class="mb-4">谷口瑶光 <br class="d-block d-md-none"><span class="fs-5">（Youkou TANIGUCHI、youkou）</span></h3>
                     <p>WEBエンジニア、絵描き</p>
                     <p>1987年生まれ。子どもの頃から物事の仕組みや全体像を探ることに興味があり、学生時代に記号欄やメディア論の世界に触れた後、IT業界で自治体や企業向けの基幹業務システム開発、ウェブアプリ／サイト制作に携わっています。</p>
-                    <p>また、土着の信仰や慣習、言葉などに関心があり、光（Radiance）をテーマに絵を描いたりプログラミングしたりしています。九州の宝満山を舞台としたゲームを構想中で、その設定から書き下ろした小説「東風」を <a href="https://www.semuian.jp" target="_blank" rel="noopener noreferrer" class="link-warning">和を楽しむ文化系同人結社「semuian（施無畏庵・せむいあん）」</a> で公開しています。</p>
+                    <p>また、土着の信仰や慣習、言葉などに関心があり、光（Radiance）をテーマに絵を描いたりプログラミングしたりしています。九州の宝満山を舞台としたゲーム「東風（こち）」を構想中で、その設定から書き下ろした小説を <a href="https://www.semuian.jp" target="_blank" rel="noopener noreferrer" class="link-warning">和を楽しむ文化系同人結社「semuian（施無畏庵・せむいあん）」</a> で公開しています。</p>
                     <p>趣味は読書や映画鑑賞、博物館や美術館散策、ご先祖様の供養（お仏壇のお世話、お墓参りやお寺での回向、年忌法要等）、神社仏閣や教会等へ巡礼に出るなどしています。上用饅頭や金平糖が大好き。</p>
                     <p class="mb-1">SNS</p>
                     <ul>
