--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     <header>
         <section class="container text-center pt-5 mt-5">
             <h1><a href="/" class="link-warning link-underline-opacity-0">たまのこそうし</a></h1>
-            <h2 class="fs-6">日々の雑記帳です。</h2>
+            <!-- <h2 class="fs-6">日々の雑記帳です。</h2> -->
+            <h2 class="fs-6">準備中です。</h2>
         </section>
     </header>
 
-    <main>
+    <!-- <main>
         <article class="my-5">
             <section class="container">
                 <div class="row py-5">
@@ -62,7 +63,7 @@
                 </div>
             </section>
         </article>
-    </main>
+    </main> -->
 
     <footer>
         <section class="container">
