--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <hr class="my-5">
                     <h3 class="mb-4">谷口瑶光 <br class="d-block d-md-none"><span class="fs-5">（Youkou TANIGUCHI、youkou）</span></h3>
                     <p>WEBエンジニア、絵描き</p>
-                    <p>1987年生まれ。子どもの頃から物事の仕組みや全体像を探ることに興味があり、学生時代に記号欄やメディア論の世界に触れた後、IT業界で自治体や企業向けの基幹業務システム開発、ウェブアプリ／サイト制作に携わっています。</p>
+                    <p>1987年生まれ。子どもの頃から物事の仕組みや全体像を探ることに興味があり、学生時代に記号論やメディア論の世界に触れた後、IT業界で自治体や企業向けの基幹業務システム開発、ウェブアプリ／サイト制作に携わっています。</p>
                     <p>また、土着の信仰や慣習、言葉などに関心があり、光（Radiance）をテーマに絵を描いたりプログラミングしたりしています。九州の宝満山を舞台としたゲーム「東風（こち）」を構想中で、その設定から書き下ろした小説を <a href="https://www.semuian.jp" target="_blank" rel="noopener noreferrer" class="link-warning">和を楽しむ文化系同人結社「semuian（施無畏庵・せむいあん）」</a> で公開しています。</p>
                     <p>趣味は読書や映画鑑賞、博物館や美術館散策、ご先祖様の供養（お仏壇のお世話、お墓参りやお寺での回向、年忌法要等）、神社仏閣や教会等へ巡礼に出るなどしています。上用饅頭や金平糖が大好き。</p>
                     <p class="mb-1">SNS</p>
